tests/errors/break_value_call_type_mismatch.dang
# break values contribute to the enclosing call expression type
result: [Int!]! = [1, 2, 3].map { x =>
  if (x == 2) {
    break "done"
  }
  x
}
